--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
   <body>
     <!-- container for the questions and button -->
     <div class="container">
-      <div id="question-container" class="hide"></div>
-      <div id="question">Question</div>
-      <div id="answer-buttons" class="btn-grid">
-        <button class="btn">Answer1</button>
-        <button class="btn">Answer2</button>
-        <button class="btn">Answer3</button>
-        <button class="btn">Answer4</button>
+      <div id="question-container" class="hide">
+        <div id="question">Question</div>
+        <div id="answer-buttons" class="btn-grid">
+          <button class="btn">Answer1</button>
+          <button class="btn">Answer2</button>
+          <button class="btn">Answer3</button>
+          <button class="btn">Answer4</button>
+        </div>
       </div>
       <div class="controls">
-        <button id="Start-btn" class="start-btn btn">Start</button>
+        <button id="start-btn" class="start-btn btn">Start</button>
         <button id="next-btn" class="next-btn btn hide">Next</button>
       </div>
     </div>
   </body>
-  <link rel="stylesheet" href="./script.js" />
+  <script src="./script.js"></script>
 </html>
